--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,10 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
-<p>Sample App</p>
+<% provide(:title,'Home') %>
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>StaticPages#home</h1>
+    <p>Find me in app/views/static_pages/home.html.erb</p>
+    <p>Sample App</p>
+
+  </body>
+</html>
