comments in the application helper

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,4 @@
 <% provide(:title,'About') %>
-<!DOCTYPE html>
-<html>
-   <body>
-    <h1>About Us</h1>
-    <p>Find me in app/views/static_pages/about.html.erb</p>
-    <p>About</p>
-
-  </body>
-</html>
+<h1>About Us</h1>
+<p>About</p>
+<h5>Buttocks<h5>    
